<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape"
    android:descendantFocusability="beforeDescendants"
    android:fadingEdge="none"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".Formactivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/apartment_information"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="90px" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:background="@android:color/black"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <EditText
            android:id="@+id/Apartment_info"
            android:layout_width="match_parent"
            android:layout_height="100dp"

            android:elegantTextHeight="false"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/form_description"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/middle_blue"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="1dp"

            android:text="@string/beginning_time"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="75px" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/begtime"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/inspectors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox"
            android:minHeight="51dp"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textbox"
            android:layoutDirection="locale"
            android:textAlignment="center"
            android:textSize="30sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/appartnum"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/appartment_number"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/light_blue"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1" />

    <Spinner
        android:id="@+id/unit_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textbox"
        android:minHeight="51dp" />


</LinearLayout>
